fixed background color, spacing issue

--- a/taproot-eqil/css/main.css
+++ b/taproot-eqil/css/main.css
@@ -97,7 +97,7 @@ body > div.container_24.wrapper {
 
 #header {
     width: 960px;
-    height: 126px;
+    height: 139px;
     background: url("../img/logotype.png") 115px 70px no-repeat, url("../img/type.outline.png") center 38px no-repeat;
     background-color: #366595;
     margin-bottom: 0px;
